Pass sorted array to view

--- a/views/index.pug
+++ b/views/index.pug
@@ -9,7 +9,7 @@ html
     h1 Kibana Companion 
     ul
       - for (var i = 0; i < resbody.length; i++) 
-        ul= resbody[i]
+        li= resbody[i]
       
     
     
